kotlin is taking over :smiling_imp: Added item with inventory and gui - next step, logic and gui rendering

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ package_group=net.xalcon.analyzeio
 
 mc_version=1.10.2
 forge_version=12.18.3.2297
-mcp_mappings=snapshot_20170506
+mcp_mappings=stable_29
 
 jei_version=3.+
 hwyla_version=1.8.12-B26_1.10.2
