--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,13 @@ buildscript {
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
+apply plugin: "kotlin"
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'idea'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 def username = project.hasProperty('dev_username') ? dev_username : "mcdev"
@@ -18,9 +22,11 @@ version = "${mc_version}-${version_major}.${version_minor}.${version_patch}.${bu
 group = package_group // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = mod_id
 
-sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
-compileJava {
-    sourceCompatibility = targetCompatibility = "1.8"
+allprojects {
+    tasks.withType(JavaCompile) {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 minecraft {
@@ -41,6 +47,10 @@ minecraft {
 }
 
 repositories {
+    maven {
+        name 'shadowfacts'
+        url 'http://mvn.rx14.co.uk/shadowfacts/'
+    }
   maven {
     name 'JEI'
 	url 'http://dvs1.progwml6.com/files/maven'
@@ -57,6 +67,7 @@ repositories {
 
 
 dependencies {
+    compile group: "net.shadowfacts", name: "Forgelin", version: '1.3.0'
 	deobfCompile "mezz.jei:jei_${mc_version}:${jei_version}:api"
 	deobfCompile ("com.enderio.core:EnderCore:${mc_version}-${endercore_version}") { transitive = false }
 	deobfCompile ("com.enderio:EnderIO:${mc_version}-${enderio_version}") { transitive = false }
@@ -64,6 +75,20 @@ dependencies {
 	
 	runtime "mezz.jei:jei_${mc_version}:${jei_version}"
     runtime "mcp.mobius.waila:Hwyla:${hwyla_version}"
+}
+
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+    main.kotlin.srcDirs += 'src/main/kotlin'
+}
+
+idea {
+    module {
+        inheritOutputDirs = true
+    }
+    project {
+        languageLevel = '1.8'
+    }
 }
 
 processResources {
