--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 
+kotlin_version=1.1.2
 mod_id=analyzeio
 package_group=net.xalcon.analyzeio
 
