* added recipe for analyzer block * Added simple configuration * Added tooltip analysis requirement (configurable) * Get ready for release :D * Reduced minimum version requirement for enderio to the latest stable release * Bumped version number * Added jcenter repository * added forgelin in the dependency string * fixed missing language key

--- a/build.gradle
+++ b/build.gradle
@@ -43,10 +43,11 @@ minecraft {
     mappings = mcp_mappings
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 	replace '@VERSION@', project.version
-    replace '@BUILD_NUMBER@', getBuildNumber()
+    replace '@BUILD_NUMBER@', build_number
 }
 
 repositories {
+    jcenter()
     maven {
         name 'shadowfacts'
         url 'http://mvn.rx14.co.uk/shadowfacts/'
@@ -114,9 +115,6 @@ processResources {
 }
 
 jar {
-	manifest {
-	    attributes 'FMLAT': 'ecotec_at.cfg'
-	}
 	exclude ("**/thumbs.db")
 	exclude ("**/Thumbs.db")
 	exclude ("**/*.psd")
